# agent-first-mail

./: .gitignore  AGENTS.md  Cargo.toml  README.md  spore.core.json
.github/workflows/: ci.yml  release.yml
docs/: cli.md  design-principles.md  file-formats.md  refactor-module-split.md  workspace.md
skills/: agent-first-mail.md
src/: error.rs  frontmatter.rs  imap_client.rs  lib.rs  mail.rs  main.rs  markdown.rs  progress.rs  remote.rs  runner.rs  skill_admin.rs  smtp_send.rs  templates.rs  util.rs  workspace_lock.rs
src/cli/: archive.rs  cases.rs  common.rs  message.rs  mod.rs  parse.rs  root.rs  skill.rs
src/config/: access.rs  actions.rs  archive.rs  defaults.rs  mailbox.rs  mod.rs  tests.rs  validation.rs  workspace.rs
src/imap_pull/: identity.rs  mod.rs  session.rs  special_use.rs
src/push_queue/: execute.rs  io.rs  mod.rs  preview.rs
src/runner/: dispatch.rs  lock.rs  output.rs  purge.rs  push.rs
src/store/: archive.rs  cases.rs  disposition_views.rs  doctor.rs  drafts.rs  messages.rs  mod.rs  purge.rs  push_state.rs  refs.rs  remote_sync.rs  render.rs  tests.rs  transactions.rs  triage.rs  util.rs
src/types/: case_archive.rs  ids.rs  message.rs  mod.rs  push.rs
templates/en-US/archive-message/: archive.md.j2  message.md.j2
templates/en-US/case/: case.md.j2  message.md.j2
templates/en-US/draft/: new.md.j2  reply.md.j2
templates/en-US/message/: section.md.j2
templates/en-US/notes/: default.md.j2  merge-section.md.j2
templates/en-US/status/: index.md.j2  message.md.j2
templates/en-US/triage/: view.md.j2
templates/en-US/workspace/: AGENTS.md.j2  DO_NOT_EDIT.txt.j2
tests/: .env.example  cli_integration.rs  container_e2e.rs
tests/support/: env.rs
(+14 files in other folders)
